--- a/recipes/brigadeiro.html
+++ b/recipes/brigadeiro.html
@@ -12,7 +12,7 @@
 
     <h1>Brigadeiro</h1>
 
-    <img src="./Brigadeiro-image.webp"/>
+    <img src="./Brigadeiro-image.webp"/ alt="Brigadeiro" width="450" height="300">
     <h2>Description</h2>
     <p>Brigadeiro is a popular Brazilian dessert. It's a sweet, creamy chocolate treat. Often described as a truffle or bonbon. This dessert is a staple at birthday parties.</p>
     <h2>Ingredients</h2>
