--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>
-        <a href="./recipes/brigadeiro.html">Brigadeiro</a>
-    </p>
+    <ul>
+        <li><a href="./recipes/brigadeiro.html">Brigadeiro</a></li>
+        <li><a href="./recipes/beijinho.html">Beijinho de Coco</a></li>
+    </ul>
+        
+    
 
 
 </body>
