--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./recipes/brigadeiro.html">Brigadeiro</a></li>
         <li><a href="./recipes/beijinho.html">Beijinho de Coco</a></li>
+        <li><a href="./recipes/pudim.html">Pudim de Leite</a></li>
     </ul>
         
     
